--- a/index.html
+++ b/index.html
@@ -1,71 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+
+    <title>Simple Liker</title>
+
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="./demo.css">
 
-    <title>Simple Liker</title>
-  </head>
-  <body>
-    <header>
-      <h1>Simple Liker</h1>
-    </header>
-    <article class="media-post" id="201811189">
-      <header>
-        <h2> <span>Byron Flatiron</span> says:</h2>
-      </header>
-      <p>Practice your JavaScript!</p>
-      <footer>
-        <ul>
-          <li class="like">Like! <span class="like-glyph">&#x2661;</span></li>
-        </ul>
-      </footer>
-    </article>
-    <article class="media-post" id="201811190">
-      <header>
-        <h2> <span>Rashaun Flatiron</span> says:</h2>
-      </header>
-      <p>Practice your Ruby!</p>
-      <footer>
-        <ul>
-          <li class="like">Like! <span class="like-glyph">&#x2661;</span></li>
-        </ul>
-      </footer>
-    </article>
-    <article class="media-post" id="201811191">
-      <header>
-        <h2> <span>Matt Flatiron</span> says:</h2>
-      </header>
-      <p>Practice your Python!</p>
-      <footer>
-        <ul>
-          <li class="like">Like! <span class="like-glyph">&#x2661;</span></li>
-        </ul>
-      </footer>
-    </article>
-    <article class="media-post" id="201811192">
-      <header>
-        <h2> <span>Yunchu Flatiron</span> says:</h2>
-      </header>
-      <p>Practice your Java!</p>
-      <footer>
-        <ul>
-          <li class="like">Like! <span class="like-glyph">&#x2661;</span></li>
-        </ul>
-      </footer>
-    </article>
-    <article class="media-post" id="201811193">
-      <header>
-        <h2> <span>Hussein Flatiron</span> says:</h2>
-      </header>
-      <p>Practice your Elixr!</p>
-      <footer>
-        <ul>
-          <li class="like">Like! <span class="like-glyph">&#x2661;</span></li>
-        </ul>
-      </footer>
-    </article>
-  </body>
-  <script src="demo.js" charset="utf-8"></script>
+    <style>
+        body {
+            background-color: #f8f9fa;
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+        .container {
+            max-width: 600px;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+        header h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .media-post {
+            padding: 15px;
+            margin-bottom: 15px;
+            border-bottom: 1px solid #ddd;
+        }
+        .media-post:last-child {
+            border-bottom: none;
+        }
+        .like {
+            cursor: pointer;
+            color: black;
+            font-weight: bold;
+        }
+        .like-glyph {
+            font-size: 24px;
+            cursor: pointer;
+            margin-left: 5px;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="container">
+        <header>
+            <h1>Simple Liker</h1>
+        </header>
+
+        <article class="media-post" id="201811189">
+            <header>
+                <h2><span>Byron Flatiron</span> says:</h2>
+            </header>
+            <p>Practice your JavaScript!</p>
+            <footer>
+                <ul>
+                    <li class="like">Like! <span class="like-glyph">&#x2661;</span></li>
+                </ul>
+            </footer>
+        </article>
+
+        <article class="media-post" id="201811190">
+            <header>
+                <h2><span>Rashaun Flatiron</span> says:</h2>
+            </header>
+            <p>Practice your Ruby!</p>
+            <footer>
+                <ul>
+                    <li class="like">Like! <span class="like-glyph">&#x2661;</span></li>
+                </ul>
+            </footer>
+        </article>
+
+        <article class="media-post" id="201811191">
+            <header>
+                <h2><span>Matt Flatiron</span> says:</h2>
+            </header>
+            <p>Practice your Python!</p>
+            <footer>
+                <ul>
+                    <li class="like">Like! <span class="like-glyph">&#x2661;</span></li>
+                </ul>
+            </footer>
+        </article>
+
+        <article class="media-post" id="201811192">
+            <header>
+                <h2><span>Yunchu Flatiron</span> says:</h2>
+            </header>
+            <p>Practice your Java!</p>
+            <footer>
+                <ul>
+                    <li class="like">Like! <span class="like-glyph">&#x2661;</span></li>
+                </ul>
+            </footer>
+        </article>
+
+        <article class="media-post" id="201811193">
+            <header>
+                <h2><span>Hussein Flatiron</span> says:</h2>
+            </header>
+            <p>Practice your Elixir!</p>
+            <footer>
+                <ul>
+                    <li class="like">Like! <span class="like-glyph">&#x2661;</span></li>
+                </ul>
+            </footer>
+        </article>
+    </div>
+
+    <script src="demo.js" charset="utf-8"></script>
+</body>
 </html>
